--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,3 +24,7 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Lint API spec  
+      uses: stoplightio/spectral-action@0.8.8
+      # with:
+          # file_glob: 'doc/api/*.yaml'
