--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
@@ -26,5 +26,6 @@ jobs:
       run: mvn -B package --file pom.xml
     - name: Lint API spec  
       uses: stoplightio/spectral-action@v0.8.8
-      # with:
-          # file_glob: 'doc/api/*.yaml'
+      with:
+          spectral_ruleset: 'greetings.spectral.yml'
+          file_glob: 'src/main/resources/oas3.yaml'
