--- a/src/main/resources/oas3.yaml
+++ b/src/main/resources/oas3.yaml
@@ -231,6 +231,7 @@ components:
       required:
         - message
         - isFriendly
+        - label
       properties:
         id:
           description: Id
