--- a/src/main/resources/oas3.yaml
+++ b/src/main/resources/oas3.yaml
@@ -135,7 +135,7 @@ paths:
       - Greetings
       externalDocs:
         description: API method documentation
-        url: https://docs.pexa.com.au/v1/greetings/#create-a-greeting
+        url: https://docs.acme.com.au/v1/greetings/#create-a-greeting
       parameters: []
       requestBody:
         description: 'Create a greeting request'
