--- a/pom.xml
+++ b/pom.xml
@@ -79,17 +79,6 @@
       <artifactId>validation-api</artifactId>
       <version>2.0.1.Final</version>
     </dependency>
-    <dependency>
-      <groupId>javax.annotation</groupId>
-      <artifactId>javax.annotation-api</artifactId>
-      <version>1.3.2</version>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>2.5</version>
-      <scope>provided</scope>
-    </dependency>
 
 
     <!-- end-->
@@ -123,7 +112,7 @@
       <plugin>
         <groupId>org.openapitools</groupId>
         <artifactId>openapi-generator-maven-plugin</artifactId>
-        <version>6.2.0</version>
+        <version>6.2.1</version>
         <executions>
           <execution>
             <goals>
@@ -152,6 +141,7 @@
                 <hideGenerationTimestamp>true</hideGenerationTimestamp>
                 <documentationProvider>springdoc</documentationProvider>
                 <oas3>true</oas3>
+                <useSpringBoot3>true</useSpringBoot3>
                 <!-- <skipDefaultInterface>true</skipDefaultInterface> -->
                 <!-- <interfaceOnly>true</interfaceOnly> -->
               </configOptions>
