--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,3 +29,54 @@ jobs:
       with:
           spectral_ruleset: 'greetings.spectral.yml'
           file_glob: 'src/main/resources/oas3.yaml'
+  docker_build_and_push:
+    name: Docker Build and Push
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Extract Docker metadata for Docker Hub
+        id: meta_dockerhub
+        uses: docker/metadata-action@v4
+        with:
+          images: shanelee007/${{ github.repository }}
+          # tags: |
+            # type=semver,pattern={{version}},value=${{ inputs.version }}
+            # type=semver,pattern={{major}}.{{minor}},value=${{ inputs.version }}
+            # type=semver,pattern={{major}},value=${{ inputs.version }}
+            # type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') }}
+          # flavor: |
+            # latest=false
+      - name: Compute final image tags
+        id: tags
+        run: |
+          echo "tags<<EOF" >> $GITHUB_OUTPUT
+          echo '${{ steps.meta_dockerhub.outputs.tags }}' >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64 # also support the new mac architecture (requires buildx)
+          # push: true
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.tags.outputs.tags }}
+          labels: ${{ steps.meta_dockerhub.outputs.labels }}
+          # use layer caching. Don't forget mode=max to also cache the build image
+          # (vs only the final image - mode: min)
+          cache-from: type=gha
+          cache-to: type=gha,mode=max        
