--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         id: meta_dockerhub
         uses: docker/metadata-action@v4
         with:
-          images: shanelee007/${{ github.repository }}
+          images: shanelee007/api-first-demo
           # tags: |
             # type=semver,pattern={{version}},value=${{ inputs.version }}
             # type=semver,pattern={{major}}.{{minor}},value=${{ inputs.version }}
@@ -48,12 +48,9 @@ jobs:
             # type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') }}
           # flavor: |
             # latest=false
-      - name: Compute final image tags
-        id: tags
-        run: |
-          echo "tags<<EOF" >> $GITHUB_OUTPUT
-          echo '${{ steps.meta_dockerhub.outputs.tags }}' >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+      # - name: Compute final image tags
+      #   id: tags
+      #   run: echo 'tags=${{ steps.meta_dockerhub.outputs.tags }}' >> $GITHUB_OUTPUT
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -74,7 +71,7 @@ jobs:
           platforms: linux/amd64,linux/arm64 # also support the new mac architecture (requires buildx)
           # push: true
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.tags.outputs.tags }}
+          tags: ${{ steps.meta_dockerhub.outputs.tags }}
           labels: ${{ steps.meta_dockerhub.outputs.labels }}
           # use layer caching. Don't forget mode=max to also cache the build image
           # (vs only the final image - mode: min)
