--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,8 +56,8 @@ jobs:
             # type=semver,pattern={{major}}.{{minor}},value=${{ inputs.version }}
             # type=semver,pattern={{major}},value=${{ inputs.version }}
             # type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') }}
-          # flavor: |
-            # latest=false
+          flavor: |
+            latest=true
       # - name: Compute final image tags
       #   id: tags
       #   run: echo 'tags=${{ steps.meta_dockerhub.outputs.tags }}' >> $GITHUB_OUTPUT
@@ -78,7 +78,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          platforms: linux/amd64 # also support the new mac architecture (requires buildx)
+          platforms: linux/amd64,linux/arm64 # also support the new mac architecture (requires buildx)
           # push: true
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta_dockerhub.outputs.tags }}
