--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,16 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>jib-maven-plugin</artifactId>
+        <version>3.3.1</version>
+        <configuration>
+          <to>
+            <image>docker.io/shanelee007/api-first-demo-jib</image>
+          </to>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <repositories>
